# rag-poc

./: .gitignore  Dockerfile  README.md  chat.html  docker-compose.yml  pyproject.toml  pytest.ini
notebooks/: tests.csv
scripts/: 1_collect_events.py  2_build_vector_database.py  3_run_rag.py  4_run_chatbot.py
src/api/: main.py
src/api/controllers/: ask_controller.py  rebuild_controller.py
src/api/shemas/: ask_in.py  ask_out.py  doc_item.py  rebuild_out.py
src/chatbot/: interactive_bot.py
src/chunking/: event_chunking.py  text_splitter.py
src/embeddings/: mistral_vectorizer.py
src/fetching/: clean_events.py  fetch_events.py
src/rag/: rag_system.py
src/vector/: langchain_faiss.py
tests/: conftest.py  test_fetch_events.py
tests/integration/: test_api.py  test_main_lifespan.py
tests/unit/: test_event_cleaner.py  test_open_agenda_fetcher.py  test_rag_system.py  test_vector_store.py
